static/style.css
/* General Styling */
body {
    font-family: Arial, sans-serif;
    margin: 0;
    padding: 0;
    background-color: var(--body-bg);
    color: var(--body-text);
}

h1 {
    color: var(--heading-color);
}

.navbar {
    background-color: var(--navbar-bg) !important;
}

.footer {
    background-color: var(--footer-bg);
    color: var(--footer-text);
}

/* Progress bar styling */
#progress-bar {
    color: var(--progress-bar-text);
}

/* Dark Mode Variables */
:root {
    --body-bg: #f8f9fa;
    --body-text: #212529;
    --heading-color: #333;
    --navbar-bg: #ffffff;
    --footer-bg: #f8f9fa;
    --footer-text: #212529;
    --progress-bar-text: #fff;
}

body.dark-mode {
    --body-bg: #212529;
    --body-text: #f8f9fa;
    --heading-color: #f8f9fa;
    --navbar-bg: #343a40;
    --footer-bg: #343a40;
    --footer-text: #f8f9fa;
    --progress-bar-text: #000;
}

